tests/syntax_errors/test46_2.tl
require "ifj21"
03e
